<resources>
    <string name="app_name">Cinta Bogor</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="action_search">Cari lokasi</string>
    <string name="action_share">Share lokasi</string>
    <string name="tv_title_item_main">Tempat Wisata</string>
    <string name="tv_title_item_navigationview">Favoritku</string>
    <string name="tv_title_detail">Tempat Wisata</string>
    <string name="tv_dist_detail">399.72 km</string>
    <string name="tv_desc_detail">Deskripsi</string>
    <string name="tv_address_detail">Jl. Gading 8 Blok D-9, Komplek TNI-AL, Kelapa Gading Barat</string>
    <string name="tv_tulasan_detail">Ulasan</string>
    <string name="tv_vulasan_detail">Belum ada ulasan</string>
    <string name="tv_kesukaan_detail">Kesukaan</string>
    <string name="tv_checkin_detail">Check In</string>
    <string name="tv_title_slide">Tempat Wisata</string>
    <string name="tv_detail_slide">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
    <string name="tv_dist_item_content_list">422.26 km</string>
    <string name="search_string">Cari Lokasi</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>
    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo."</string>
    <string name="BackDropBottomSheetBehavior">com.aprido.cintabogor.widget.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.aprido.cintabogor.widget.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.aprido.cintabogor.widget.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.aprido.cintabogor.widget.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.aprido.cintabogor.widget.ScrollingAppBarLayoutBehavior</string>
</resources>
