<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:behavior_scrolling_appbar_peek_height="@dimen/bottom_sheet_peek_height"
            app:layout_behavior="@string/ScrollingAppBarLayoutBehavior">

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_nearby_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/backBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/anchor_point"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            app:layout_behavior="@string/BackDropBottomSheetBehavior"
            app:behavior_backdrop_peekHeight="@dimen/bottom_sheet_peek_height"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false">

            </android.support.v4.view.ViewPager>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:layout_behavior="@string/BottomSheetBehaviorGoogleMapsLike"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
            app:anchorPoint="@dimen/anchor_point"
            >

            <include layout="@layout/content_main" />

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottomBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparant"
            android:orientation="vertical"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/merged_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:tag="modal-appbar"
            app:layout_behavior="@string/MergedAppBarLayoutBehavior"
            app:behavior_merged_appbar_anchor_point="@dimen/anchor_point">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="bottom"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/expanded_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/abc_action_bar_default_height_material"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/key_binding_default_toolbar_name"
                    app:navigationIcon="@android:drawable/ic_menu_add"/>

            </FrameLayout>

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:background="@color/colorWhite">

        <include layout="@layout/content_navigationview"/>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>