<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/content_detail"/>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottomSheetDetail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@color/colorPrimaryDark"
            >

            <ImageView
                android:layout_width="72dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_more"
                android:contentDescription=""
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:contentDescription=""
                    android:src="@drawable/ic_comment"/>

                <com.aprido.cintabogor.widget.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    android:text="@string/tv_tulasan_detail"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    app:customFont="HelveticaLTStd-LightCond.otf"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorWhite">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:contentDescription=""
                    android:src="@drawable/ic_heart"/>

                <com.aprido.cintabogor.widget.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    android:text="@string/tv_kesukaan_detail"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    app:customFont="HelveticaLTStd-LightCond.otf"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorWhite">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:contentDescription=""
                    android:src="@drawable/ic_chekcin"/>

                <com.aprido.cintabogor.widget.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    android:text="@string/tv_checkin_detail"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    app:customFont="HelveticaLTStd-LightCond.otf"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>